--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.sputnikdev</groupId>
     <artifactId>bluetooth-manager</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -43,7 +43,7 @@
         <url>https://github.com/sputnikdev/bluetooth-manager/tree/master</url>
         <connection>scm:git:git@github.com:sputnikdev/bluetooth-manager.git</connection>
         <developerConnection>scm:git:git@github.com:sputnikdev/bluetooth-manager.git</developerConnection>
-        <tag>bluetooth-manager-1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
