* adding an option to prevent location update. Fixes: https://github.com/sputnikdev/eclipse-smarthome-bluetooth-binding/issues/56 * adding "Very slow kalman filter" for stationary devices. Fixes: https://github.com/sputnikdev/eclipse-smarthome-bluetooth-binding/issues/57 * fixes for "beacon" devices (dynamic MAC address)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-script: mvn test -P !build-extras -B
+script: mvn test -P !build-extras -B -DskipITs=true
 notifications:
   slack: kolotov:69j2qLZ0paybeuQMcKfyN2gP
 before_deploy: git checkout master
